src/middle/irgen/snapshots/compiler__middle__irgen__tests__assign_array.snap
---
source: src/middle/irgen/mod.rs
expression: llvm_ir
---
define i32 @main() {
%entry:
%alloca_2 = alloca i32
%alloca_5 = alloca [1 x i32]
%getelementptr_6 = getelementptr [1 x i32], ptr %alloca_5, i32 0, i32 0
%getelementptr_7 = getelementptr i32, ptr %getelementptr_6, i32 0
store i32 0, ptr %getelementptr_7
%getelementptr_9 = getelementptr [1 x i32], ptr %alloca_5, i32 0, i32 0
%load_10 = load i32, ptr %getelementptr_9
%getelementptr_11 = getelementptr [1 x i32], ptr %alloca_5, i32 0, i32 %load_10
store i32 1, ptr %getelementptr_11
%getelementptr_13 = getelementptr [1 x i32], ptr %alloca_5, i32 0, i32 0
%load_14 = load i32, ptr %getelementptr_13
store i32 %load_14, ptr %alloca_2
br label %exit

%exit:
%load_3 = load i32, ptr %alloca_2
ret i32 %load_3


}
