src/middle/irgen/snapshots/compiler__middle__irgen__tests__constant_fold.snap
---
source: src/middle/irgen/mod.rs
expression: llvm_ir
---
@x = dso_local constant i32 4
@y = dso_local constant i32 16
define i32 @main() {
%entry:
%load_1 = load i32, ptr @x
%load_2 = load i32, ptr @y
%Add_3 = add i32, %load_1, %load_2
ret i32 %Add_3


}
