src/middle/irgen/snapshots/compiler__middle__irgen__tests__continue.snap
---
source: src/middle/irgen/mod.rs
expression: llvm_ir
---
define i32 @main() {
%entry:
%alloca_2 = alloca i32
%alloca_5 = alloca i32
store i32 0, ptr %alloca_5
br label %cond0

%cond0:
%load_15 = load i32, ptr %alloca_5
%icmp_16 = icmp slt i32 %load_15, 10
br i1 %icmp_16, label %body1, label %final2

%body1:
%load_11 = load i32, ptr %alloca_5
%Add_12 = add i32, %load_11, 1
store i32 %Add_12, ptr %alloca_5
br label %cond0

%final2:
%load_18 = load i32, ptr %alloca_5
store i32 %load_18, ptr %alloca_2
br label %exit

%exit:
%load_3 = load i32, ptr %alloca_2
ret i32 %load_3


}
