src/middle/irgen/snapshots/compiler__middle__irgen__tests__control_flow.snap
---
source: src/middle/irgen/mod.rs
expression: llvm_ir
---
define i32 @main() {
%entry:
%alloca_1 = alloca i32
store i32 0, ptr %alloca_1
br label %cond0

%cond0:
%load_21 = load i32, ptr %alloca_1
%icmp_22 = icmp slt i32 %load_21, 10
br i1 %icmp_22, label %body1, label %final2

%body1:
%load_7 = load i32, ptr %alloca_1
%Add_8 = add i32, %load_7, 1
store i32 %Add_8, ptr %alloca_1
br label %cond3

%final2:
%load_24 = load i32, ptr %alloca_1
ret i32 %load_24

%cond3:
%load_15 = load i32, ptr %alloca_1
%icmp_16 = icmp eq i32 %load_15, 5
br i1 %icmp_16, label %then4, label %alt5

%then4:
br label %final2

%alt5:
br label %cond0


}
